syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/supernode";

package supernode;

service RegisterArtowrk {
    rpc Health(stream Empty) returns (stream Empty);
    
    rpc Handshake(HandshakeRequest) returns (HandshakeReply);
}

message Empty {}

message HandshakeRequest {
    string nodeID = 1;
    string sessID = 2;
}
message HandshakeReply {
}



